<?xml version="1.0"?>
<package>
  <name>dialogflow_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the ROS wrapper for Dialogflow</description>

  <maintainer email="rokus@ruvu.nl">Rokus Ottervanger</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


